--- a/env.example
+++ b/env.example
@@ -1,2 +1,2 @@
-DATABASE_URL=postgresql://timetracker_user:yourpassword@db:5432/timetracker_db
+DATABASE_URL=postgresql://timetracker_user:yourpassword@db:15432/time_tracker
 CORS_ORIGINS=http://localhost:3000
